--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,18 @@
   margin: .2em 0;
 }
 
+.App-header h1 small {
+  color: yellow;
+  font-size: .5em;
+  opacity: 0.5;
+  margin-left: .5em;
+}
+
+.App-header p {
+  font-size: .75em;
+  margin: 0
+}
+
 .App-link {
   color: #61dafb;
 }
@@ -32,7 +44,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
 
+.midiStatus {
+  text-transform: uppercase;
+  color: gray;
+  text-align: center;
 }
 
 .controller {
@@ -47,18 +64,17 @@
 }
 
 .button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 10em;
+  height: 10em;
+
   border: solid 1px gray;
   border-radius: 100px;
-  width: 100px;
-  height: 100px;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+.description {
+  max-width: 48em;
 }
