--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,15 @@
-body {
-  background-color: #393939;
-  color: #EEEEEE;
-
-  font-family: 'Nunito', 'Open Sans', sans-serif;
-}
-
 h1,
 h2,
 h3,
 h4 {
   color: #898989;
   font-family: 'Nunito', 'Open Sans', sans-serif;
+  margin-bottom: 0.5em;
 }
 
 h1 {
   font-size: 3.2em;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 
 h2 {
@@ -24,26 +18,25 @@ h2 {
 
 h3 {
   font-size: 2em;
-  margin-bottom: .5em;
 }
 
 h4 {
   font-size: 1.625em;
 }
 
-
-
 header {
-  margin-top: 1em;
+  position: fixed;
+  width: 100%;
+  padding-top: 1em;
+  background-color: #393939;
 }
 
 header .title {
-  margin: .2em 0 0 0;
+  margin: 0.2em 0 0 0;
   color: yellow;
   font-size: 3em;
   font-weight: bold;
 }
-
 
 header ul {
   float: right;
@@ -55,11 +48,28 @@ header ul li {
   font-size: small;
   font-weight: bold;
   line-height: 3em;
+  padding-left: 0;
 }
 
 
+header ul li:after {
+  content: ">";
+  margin-left: 1em;
+  color: yellow;
+}
+
+header a {
+  text-decoration: none;
+}
+
+header nav li a {
+  color: yellow;
+  text-decoration: none;
+  border-bottom: solid yellow 2px;
+}
+
 .App-link {
-  color: #FFCC00;
+  color: yellow;
 }
 
 .midiStatus {
@@ -95,16 +105,47 @@ header ul li {
 }
 
 section {
-  margin: 0 auto;
-  max-width: 900px;
   min-height: 100vh;
+  padding: 67px 0;
+}
+
+.wrapper {
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 .grey {
   background-color: #f0f2f7;
+  color: #393939;
 }
 
 li {
   margin-bottom: 1em;
   padding: 0 1em;
+}
+
+#performance {
+  background-color: transparent;
+  background-image: linear-gradient(0deg,
+    transparent 24%,
+    rgba(255, 255, 255, 0.05) 25%,
+    rgba(255, 255, 255, 0.05) 26%,
+    transparent 27%,
+    transparent 74%,
+    rgba(255, 255, 255, 0.05) 75%,
+    rgba(255, 255, 255, 0.05) 76%,
+    transparent 77%,
+    transparent),
+    linear-gradient(90deg,
+    transparent 24%,
+    rgba(255, 255, 255, 0.05) 25%,
+    rgba(255, 255, 255, 0.05) 26%,
+    transparent 27%,
+    transparent 74%,
+    rgba(255, 255, 255, 0.05) 75%,
+    rgba(255, 255, 255, 0.05) 76%,
+    transparent 77%,
+    transparent);
+  height: 100%;
+  background-size: 50px 50px;
 }
