--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -7,6 +13,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+
+  color: #eeeeee;
+  background-color: #393939;
+
+  font-family: 'Nunito', 'Open Sans', sans-serif;
 }
 
 code {
