--- a/src/App.css
+++ b/src/App.css
@@ -53,9 +53,13 @@ header ul li {
 
 
 header ul li:after {
-  content: ">";
-  margin-left: 1em;
+  content: "▶";
+  margin: 1em 0 0 1em;
   color: yellow;
+}
+
+header ul li:last-child:after {
+  content: none;
 }
 
 header a {
@@ -65,7 +69,9 @@ header a {
 header nav li a {
   color: yellow;
   text-decoration: none;
-  border-bottom: solid yellow 2px;
+
+  padding-bottom: .15em;
+  border-bottom: dashed yellow 2px;
 }
 
 .App-link {
@@ -124,8 +130,9 @@ li {
   padding: 0 1em;
 }
 
-#performance {
-  background-color: transparent;
+body,
+header {
+  background-color: #393939;
   background-image: linear-gradient(0deg,
     transparent 24%,
     rgba(255, 255, 255, 0.05) 25%,
@@ -146,6 +153,6 @@ li {
     rgba(255, 255, 255, 0.05) 76%,
     transparent 77%,
     transparent);
-  height: 100%;
+  /* height: 100%; */
   background-size: 50px 50px;
 }
