--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: 'Oswald', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -17,7 +17,6 @@ body {
   color: #eeeeee;
   background-color: #393939;
 
-  font-family: 'Nunito', 'Open Sans', sans-serif;
 }
 
 code {
