--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,30 @@
+body,
+header {
+  background-color: #393939;
+  background-image: linear-gradient(0deg,
+    transparent 24%,
+    rgba(255, 255, 255, 0.05) 25%,
+    rgba(255, 255, 255, 0.05) 26%,
+    transparent 27%,
+    transparent 74%,
+    rgba(255, 255, 255, 0.05) 75%,
+    rgba(255, 255, 255, 0.05) 76%,
+    transparent 77%,
+    transparent),
+    linear-gradient(90deg,
+    transparent 24%,
+    rgba(255, 255, 255, 0.05) 25%,
+    rgba(255, 255, 255, 0.05) 26%,
+    transparent 27%,
+    transparent 74%,
+    rgba(255, 255, 255, 0.05) 75%,
+    rgba(255, 255, 255, 0.05) 76%,
+    transparent 77%,
+    transparent);
+  /* height: 100%; */
+  background-size: 50px 50px;
+}
+
 h1,
 h2,
 h3,
@@ -24,6 +51,8 @@ h4 {
   font-size: 1.625em;
 }
 
+
+
 header {
   position: fixed;
   width: 100%;
@@ -44,11 +73,14 @@ header ul {
 
 header ul li {
   display: inline-block;
+  margin-bottom: 1em;
+  margin-left: 1em;
+
   text-transform: uppercase;
   font-size: small;
   font-weight: bold;
   line-height: 3em;
-  padding-left: 0;
+
 }
 
 
@@ -125,34 +157,20 @@ section {
   color: #393939;
 }
 
-li {
-  margin-bottom: 1em;
-  padding: 0 1em;
+footer {
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+
+  min-height: 300px;
+  padding: 4em;
+
+
+  text-transform: uppercase;
+  font-size: small;
+  font-weight: bold;
 }
 
-body,
-header {
-  background-color: #393939;
-  background-image: linear-gradient(0deg,
-    transparent 24%,
-    rgba(255, 255, 255, 0.05) 25%,
-    rgba(255, 255, 255, 0.05) 26%,
-    transparent 27%,
-    transparent 74%,
-    rgba(255, 255, 255, 0.05) 75%,
-    rgba(255, 255, 255, 0.05) 76%,
-    transparent 77%,
-    transparent),
-    linear-gradient(90deg,
-    transparent 24%,
-    rgba(255, 255, 255, 0.05) 25%,
-    rgba(255, 255, 255, 0.05) 26%,
-    transparent 27%,
-    transparent 74%,
-    rgba(255, 255, 255, 0.05) 75%,
-    rgba(255, 255, 255, 0.05) 76%,
-    transparent 77%,
-    transparent);
-  /* height: 100%; */
-  background-size: 50px 50px;
+
+#forge {
+  min-height: 80vh;
 }
