--- a/src/App.css
+++ b/src/App.css
@@ -159,18 +159,22 @@ section {
 
 footer {
   display: grid;
-  grid-template-columns: 3fr 2fr;
+  grid-template-columns: 2fr 1fr;
+  grid-gap: 4em;
 
-  min-height: 300px;
-  padding: 4em;
+  padding: 3em 0;
 
-
+  /* 
   text-transform: uppercase;
   font-size: small;
-  font-weight: bold;
+  font-weight: bold; */
+}
+
+footer h4 {
+  margin-top: 0;
 }
 
 
 #forge {
-  min-height: 80vh;
+  min-height: 85vh;
 }
