--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,8 @@ header nav li a {
 }
 
 .controller {
+
+
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -125,14 +127,16 @@ header nav li a {
   border: solid 1px gray;
   border-radius: 85px;
   padding: 2em;
+
+  max-width: 50vw;
 }
 
 .pad {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 10em;
-  height: 10em;
+  /* width: 10em;
+  height: 10em; */
   border: solid 1px gray;
   border-radius: 100px;
   text-align: center;
