--- a/src/controller/controller.css
+++ b/src/controller/controller.css
@@ -1,16 +1,18 @@
 .stage {
-  /* margin-top: 100px; */
+  perspective: 600px;
+
 }
 
 .scene {
   width: 200px;
   height: 200px;
-  /* perspective: 600px; */
   margin: 0 auto;
   transform-style: preserve-3d;
 
+
+
   transition: transform 1s;
-  /* animation: spincube 24s linear infinite; */
+  animation: spin 12s linear infinite;
 
   transform: rotateX(54deg) rotateY(-8deg) rotateZ(16deg);
 }
@@ -25,32 +27,34 @@
 
 @keyframes spin {
   100% {
-    transform: rotateY(360deg);
+    transform: rotateX(54deg) rotateY(-8deg) rotateZ(376deg);
   }
 }
 
 
 @keyframes spincube {
-  /* 16% {
+  16% {
     -webkit-transform: rotateY(-90deg);
   }
 
   33% {
     -webkit-transform: rotateY(-90deg) rotateZ(90deg);
-  } */
+  }
 
-  100% {
+  50% {
     -webkit-transform: rotateZ(360deg);
   }
 
-  /* 66% {
+  66% {
     -webkit-transform: rotateY(90deg) rotateX(90deg);
   }
 
   83% {
     -webkit-transform: rotateX(90deg);
-  } */
+  }
 }
+
+
 
 .cube__face {
   position: absolute;
@@ -63,13 +67,13 @@
 
 .cube__face--front {
 
-  transform: rotateX(-90deg) translateZ(150px);
-  height: 100px;
+  transform: rotateX(-90deg) translateZ(170px);
+  height: 60px;
 }
 
 .cube__face--back {
-  transform: rotateX(90deg) translateZ(50px);
-  height: 100px;
+  transform: rotateX(90deg) translateZ(30px);
+  height: 60px;
 
 
 
@@ -77,21 +81,49 @@
 
 
 .cube__face--bottom {
-  transform: rotateY(180deg) translateZ(50px);
+  transform: rotateY(180deg) translateZ(30px);
 
 }
 
 .cube__face--right {
-  transform: rotateY(90deg) translateZ(150px);
-  width: 100px;
+  transform: rotateY(90deg) translateZ(170px);
+  width: 60px;
 }
 
 .cube__face--left {
-  transform: rotateY(-90deg) translateZ(50px);
-  width: 100px;
+  transform: rotateY(-90deg) translateZ(30px);
+  width: 60px;
 }
 
 .cube__face--top {
-  transform: rotateY(0deg) translateZ(50px);
+  transform: rotateY(0deg) translateZ(30px);
 
+}
+
+.midiStatus {
+  text-transform: uppercase;
+  color: gray;
+  text-align: center;
+}
+
+.controller {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(4, 35px);
+  grid-gap: 10px;
+  border: solid 1px gray;
+  border-radius: 85px;
+  padding: 10px 0 0 10px;
+  max-width: 50vw;
+}
+
+.pad {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: solid 1px #333;
+  border-radius: 100px;
+  text-align: center;
+  font-size: 10px;
+  height: 35px;
 }
