--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+.row {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-gap: 1em;
+}
+
+.row-forge {
+  grid-template-columns: 3fr 2fr;
+}
+
+@media screen and (min-width: 992px) {
+  .row-2 {
+    grid-template-columns: 1fr 1fr;
+  }
+}
